--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -30,7 +30,6 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="daniel@mail.dk"
         android:hint="Enter email" />
 
     <TextView
@@ -43,8 +42,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:text="supersecret"
-        android:inputType="textPassword" />
+        android:inputType="textPassword"
+        android:hint="Enter password"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -70,6 +69,14 @@
             android:layout_marginStart="10dp"
             android:text="Sign up"
             android:layout_gravity="center"/>
+
+        <CheckBox
+            android:id="@+id/checkBox"
+            android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Remember me" />
 
     </LinearLayout>
 
